--- a/Frontend/my-app/src/Components/Admin/AdminLanding/AdminLanding.css
+++ b/Frontend/my-app/src/Components/Admin/AdminLanding/AdminLanding.css
@@ -1,16 +1,14 @@
 
 /* To be included before every new file */
-.Radio-landing-hor{
+.Admin-landing-hor{
     display: flex;
-    background-color: rgb(14, 14, 98);
+    background-color: rgb(82,209,188);
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
     padding: 8px;
     overflow-x: hidden;
     width:100%;
-    
-    
 }
 
 #docsideimg{
@@ -21,7 +19,7 @@
     width: 120px;
 }
 
-.RadioSearch
+.AdminSearch
 {
     height: 30px;
     width: 100vh;
@@ -33,24 +31,25 @@
     padding-right: 10px;  /*to give space in search bar*/
 }
 
-.input-icon1
+.input-icon2
 {
    margin-left: 250px;
    margin-top: 20px;
+   
 }
 
 /* ------------------------------------------------------ */
-.Radio-Land-ver {
+.Admin-Land-ver {
     display: flex;
     flex-direction: row;
     background-color: white;
     margin-bottom:15px;
 }
-.Radio-Land-ver1 {
+.Admin-Land-ver1 {
     width: 100px;
     flex:0.4;
     height: 100vh;
-    background:#0E0F62 ;
+    background:rgb(82,209,188) ;
     margin-top: 10px;
     margin-left: 6px;
     margin-right: 30px;
@@ -59,7 +58,7 @@
     flex-direction: column;
 }
 
-.Radio-Land-ver2 {
+.Admin-Land-ver2 {
    margin-top: 10px;
    flex:2;
    height: 100vh;
@@ -85,16 +84,16 @@
   ::-webkit-scrollbar-thumb:hover {
     background-color: #a8bbbf;
   }
- .RadioLandingcard{
+ .AdminLandingcard{
     margin-bottom: 10px;
     margin-top: 10px;
     text-align: center;
-    box-shadow: inset 0 0 0 2px #0E0F62;
+    box-shadow: inset 0 0 0 2px rgb(82,209,188);
   }
  
-  .radio-landing-about-us-section { 
+  .Admin-landing-about-us-section { 
     padding: 20px;
-    background-color: #0E0F62;
+    background-color: rgb(82,209,188);
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     text-align: center;
     color: white;
