--- a/Frontend/my-app/src/Components/Patient/PatientLanding/PatientLanding.css
+++ b/Frontend/my-app/src/Components/Patient/PatientLanding/PatientLanding.css
@@ -1,31 +1,24 @@
 
 /* To be included before every new file */
-.Patient-Login-hor{
+.Patient-landing-hor{
     display: flex;
-    min-width: 1200px;
-    background-color: #1588C1;
+    background-color: #1588C2;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    padding: 8px;
+    overflow-x: hidden;
+    width:100%;
+    
+    
 }
 
-
-  
-#patientsideimg{
+#docsideimg{
     padding-top: 1%;
-    padding-left: 10%;
+    padding-left: 1%;
+    margin-left: 10px;
     height: 120px;
     width: 120px;
-}
-  
-  
-
-
-/* ------------------------------------------------------ */
-
-.Search{
-    display: flex;
-    justify-content: center; /* Center horizontally */
-    align-items: center; /* Center vertically */
-    padding-left: 10%;
-    
 }
 
 .PatientSearch
@@ -34,32 +27,80 @@
     width: 100vh;
     border-radius:50px;
     border-width: 3px;
-    border-color: #1588C1;
-    margin-left: 150px;
+    border-color: rgb(242, 247, 246);
     margin-top: 20px;
+    padding-left: 10px;  /*to give space in search bar*/
+    padding-right: 10px;  /*to give space in search bar*/
+}
 
-}
-.PatientLogout{
-    display: flex;
-    justify-content: center; /* Center horizontally */
-    align-items: center; /* Center vertically */
-    
-}
 .input-icon1
 {
    margin-left: 250px;
    margin-top: 20px;
 }
 
+/* ------------------------------------------------------ */
+.Patient-Land-ver {
+    display: flex;
+    flex-direction: row;
+    background-color: white;
+    margin-bottom:15px;
+}
+.Patient-Land-ver1 {
+    width: 100px;
+    flex:0.4;
+    height: 100vh;
+    background:#1588C2 ;
+    margin-top: 10px;
+    margin-left: 6px;
+    margin-right: 30px;
+    margin-bottom: 2px;
+    display: flex;
+    flex-direction: column;
+}
 
- .Patientfooter {
-    position: fixed;
-    left: 0;
-    bottom: 0;
-    width: 100%;
-    background-color: #1588C1;
-    padding: 10px;
-    text-align: center;
-    color: white;
+.Patient-Land-ver2 {
+   margin-top: 10px;
+   flex:2;
+   height: 100vh;
+   overflow-y: scroll;
+}
+
+/* custom scrollbar */
+::-webkit-scrollbar {
+    width: 20px;
   }
   
+  ::-webkit-scrollbar-track {
+    background-color: transparent;
+  }
+  
+  ::-webkit-scrollbar-thumb {
+    background-color: #d6dee1;
+    border-radius: 20px;
+    border: 6px solid transparent;
+    background-clip: content-box;
+  }
+  
+  ::-webkit-scrollbar-thumb:hover {
+    background-color: #a8bbbf;
+  }
+ .PatientLandingcard{
+    margin-bottom: 10px;
+    margin-top: 10px;
+    text-align: center;
+    box-shadow: inset 0 0 0 2px #1588C2;
+  }
+ 
+  .Patient-landing-about-us-section { 
+    padding: 20px;
+    background-color: #1588C2;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    text-align: center;
+    color: white;
+    font-weight: bold;
+  }
+
+  .LinkStyle {
+    text-decoration: none;
+  }
