--- a/Frontend/my-app/src/Components/Admin/AdminHomePage/AdminHomePage.css
+++ b/Frontend/my-app/src/Components/Admin/AdminHomePage/AdminHomePage.css
@@ -1,4 +1,4 @@
-.Admin-land-container{
+.Admin-land-container {
     display: flex;
     /* width: 100%; */
     /* background-color: rgb(230, 157, 31); */
@@ -8,10 +8,7 @@
     overflow: hidden;
 }
 
-
-
-
-.Admin-Home-hor{
+.Admin-Home-hor {
     display: flex;
     background-color: #52D1BC;
     /* width: 100%; */
@@ -19,8 +16,8 @@
     width: 100%;
 }
 
-.admin-land-icon-1{
-    padding-top: 35% ;
+.admin-land-icon-1 {
+    padding-top: 35%;
     padding-left: 15%;
     height: 150px;
     width: 100px;
@@ -32,10 +29,9 @@
     align-content: center;
     margin-left: 15%;
 }
-  
-  
-.Admin-Det-ver1 p{
-    
+
+.Admin-Det-ver1 p {
+
     font-size: larg;
     background-color: antiquewhite;
     justify-self: center;
@@ -47,16 +43,13 @@
 
 }
 
-
-  
-  
 .pageTitle {
     color: white;
     margin-left: 90px;
     margin-top: 35px;
 }
 
-.Adminfooter{
+.Adminfooter {
     position: fixed;
     left: 0;
     bottom: 0;
@@ -68,14 +61,13 @@
     margin-top: 20px;
 }
 
-
-
-.AdminLogout{
+.AdminLogout {
     display: flex;
-    justify-content: center; /* Center horizontally */
+    justify-content: center;
+    /* Center horizontally */
     align-items: center;
-    margin-left:70%; 
-    margin-bottom: 2%;   
+    margin-left: 70%;
+    margin-bottom: 2%;
 }
 
 .Admin-Det-ver {
@@ -96,17 +88,17 @@
 } */
 .Admin-Det-ver1 {
     font-size: large;
-   
+
     width: 18%;
     height: 88%;
-    background: #52D1BC ;
+    background: #52D1BC;
     margin-top: 30px;
     margin-left: 1%;
     margin-right: 2%;
     margin-bottom: 30px;
-    
-   
-   
+
+
+
 }
 
 .Admin-Det-ver2 {
@@ -118,111 +110,112 @@
     margin-right: 10px;
     margin-bottom: 30px;
     margin-right: 30px;
-    
+
 }
 
-.Admin-Det-ver2-inner{
+.Admin-Det-ver2-inner {
     padding: 30px;
     display: flex;
     flex-direction: row;
     height: 100%;
     background-color: #fcf6f6;
-  box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.3);
-  z-index: 1;
-  transform: translateY(-50px);
-  border-radius: 25px;
+    box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.3);
+    z-index: 1;
+    transform: translateY(-50px);
+    border-radius: 25px;
 }
 
-
-
-.input-icon1
-{
-   margin-left: 250px;
-   margin-top: 20px;
+.input-icon1 {
+    margin-left: 250px;
+    margin-top: 20px;
 }
 
-.Admin-Det-ver2-1{
-   
-    width:100%;
+.Admin-Det-ver2-1 {
+    width: 100%;
     height: 50%;
     background-color: #076E65;
     margin: 2%;
     border-radius: 25px;
-    
+    cursor: pointer;
+
 }
-.Admin-Det-ver2-2{
-    
-    width:100%;
+
+.Admin-Det-ver2-2 {
+
+    width: 100%;
     height: 50%;
     background-color: #0E0E62;
     margin: 2%;
     border-radius: 25px;
-   
+    cursor: pointer;
 }
-.Admin-Det-ver2-3{
-    
-    width:100%;
+
+.Admin-Det-ver2-3 {
+    width: 100%;
     height: 50%;
     background-color: #F4A52E;
     margin: 2%;
     border-radius: 25px;
-    
+    cursor: pointer;
 }
-.Admin-Det-ver2-4{
-    
-    width:100%;
+
+.Admin-Det-ver2-4 {
+    width: 100%;
     height: 50%;
     background-color: #17B2F5;
     margin: 2%;
     border-radius: 25px;
+    cursor: pointer;
 }
 
-
-
-
-.Admin-Det-ver2-1:hover, 
-.Admin-Det-ver2-2:hover, 
-.Admin-Det-ver2-3:hover, 
+.Admin-Det-ver2-1:hover,
+.Admin-Det-ver2-2:hover,
+.Admin-Det-ver2-3:hover,
 .Admin-Det-ver2-4:hover {
-    transform: scale(1.05); /* Zoom effect on hover */
-    box-shadow: 0 0 15px rgba(0, 0, 0, 0.3); /* Shadow effect on hover */
+    transform: scale(1.05);
+    /* Zoom effect on hover */
+    box-shadow: 0 0 15px rgba(0, 0, 0, 0.3);
+    /* Shadow effect on hover */
 }
 
-
-.AdminVerUp,.AdminVerDown{
+.AdminVerUp,
+.AdminVerDown {
     display: flex;
-    flex-direction: column; 
+    flex-direction: column;
     height: 100%;
     width: 500px;
-    
-    
-
 }
-.AdminVerDown{
-   
+
+.AdminVerDown {
     flex: 1;
     margin-left: 1%;
 }
-.AdminVerUp{
-    
+
+.AdminVerUp {
     flex: 1;
     margin-right: 1%;
 }
 
-.scan,.pres, .radioReport, .finalDiag{
-    width:85%;
+.scan,
+.pres,
+.radioReport,
+.finalDiag {
+    width: 85%;
     height: 85%;
     justify-content: center;
     margin: 5%;
     /* margin-top: 2%; */
     border: 3px solid black;
-    
 }
 
 
 
 
-.admindoc, .adminlab, .adminrad, .adminpat, .counttext{
+.admindoc,
+.adminlab,
+.adminrad,
+.adminpat,
+.counttext {
     width: 100%;
     color: black;
     font-size: large;
