--- a/Frontend/my-app/src/Components/Admin/AdminHomePage/AdminHomePage.css
+++ b/Frontend/my-app/src/Components/Admin/AdminHomePage/AdminHomePage.css
@@ -1,32 +1,35 @@
-.Admin-land-container{
-    display: flex;
-    /* width: 100%; */
-    /* background-color: rgb(230, 157, 31); */
-    height: 100vh;
-    flex-direction: column;
-    width: 100%;
-    overflow: hidden;
-}
-
-
-
-
 .Admin-Home-hor{
+
     display: flex;
     background-color: #52D1BC;
-    /* width: 100%; */
-    height: 18%;
-    width: 100%;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    padding: 8px;
+    overflow-x: hidden;
+    width:100%;
+   
+    
 }
-
+#docsideimg{
+    padding-top: 1%;
+    padding-left: 1%;
+    margin-left: 10px;
+    height: 120px;
+    width: 120px;
+}
+.input-icon2
+{
+   margin-left: 250px;
+   margin-top: 20px;
+   
+}
 .admin-land-icon-1{
     padding-top: 35% ;
     padding-left: 15%;
     height: 150px;
     width: 100px;
-    /* margin-left: 5%;
-    margin-top: 5%;
-    padding-left: 15%; */
+  
     align-self: center;
     margin-bottom: 25%;
     align-content: center;
@@ -46,38 +49,6 @@
 
 
 }
-
-
-  
-  
-.pageTitle {
-    color: white;
-    margin-left: 90px;
-    margin-top: 35px;
-}
-
-.Adminfooter{
-    position: fixed;
-    left: 0;
-    bottom: 0;
-    width: 100vw;
-    background-color: #52D1BC;
-    padding: 10px;
-    text-align: center;
-    color: white;
-    margin-top: 20px;
-}
-
-
-
-.AdminLogout{
-    display: flex;
-    justify-content: center; /* Center horizontally */
-    align-items: center;
-    margin-left:70%; 
-    margin-bottom: 2%;   
-}
-
 .Admin-Det-ver {
     display: flex;
     flex-direction: row;
@@ -86,17 +57,9 @@
     margin-bottom: 40px;
 }
 
-/* .Admin-Home-ver1, .Admin-Home-ver2 {
 
-    display: flex;
-    justify-content: center;
-    align-items: center;     
-    height: 100%;
-    width: 6px;            
-} */
 .Admin-Det-ver1 {
     font-size: large;
-   
     width: 18%;
     height: 88%;
     background: #52D1BC ;
@@ -104,77 +67,58 @@
     margin-left: 1%;
     margin-right: 2%;
     margin-bottom: 30px;
-    
-   
-   
 }
 
 .Admin-Det-ver2 {
     background-color: white;
-    width: 1500px;
-    height: 100%;
+    width: auto;
+    height: auto;
     margin-top: 30px;
-    margin-left: 2%;
-    margin-right: 10px;
     margin-bottom: 30px;
-    margin-right: 30px;
-    
+    margin-right: 20px;
 }
 
 .Admin-Det-ver2-inner{
-    padding: 30px;
     display: flex;
     flex-direction: row;
-    height: 100%;
+    height: auto;
     background-color: #fcf6f6;
-  box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.3);
-  z-index: 1;
-  transform: translateY(-50px);
-  border-radius: 25px;
+    box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.3);
+    z-index: 1;
+    transform: translateY(-50px);
+    border-radius: 5px;
+    padding-left: 60px;
+    padding-right: 60px;
+    padding-top: 20px;
+    padding-bottom: 20px;
 }
-
-
-
-.input-icon1
-{
-   margin-left: 250px;
-   margin-top: 20px;
-}
-
 .Admin-Det-ver2-1{
-   
-    width:100%;
-    height: 50%;
+    width: 450px;
+    height: 200px;
     background-color: #076E65;
     margin: 2%;
-    border-radius: 25px;
-    
+    border-radius: 5px;
 }
 .Admin-Det-ver2-2{
-    
-    width:100%;
-    height: 50%;
+    width: 450px;
+    height: 200px;
     background-color: #0E0E62;
     margin: 2%;
-    border-radius: 25px;
-   
+    border-radius: 5px;
 }
 .Admin-Det-ver2-3{
-    
-    width:100%;
-    height: 50%;
+    width: 450px;
+    height: 200px;
     background-color: #F4A52E;
     margin: 2%;
-    border-radius: 25px;
-    
+    border-radius: 5px;
 }
 .Admin-Det-ver2-4{
-    
-    width:100%;
-    height: 50%;
+    width: 450px;
+    height: 200px;
     background-color: #17B2F5;
     margin: 2%;
-    border-radius: 25px;
+    border-radius: 5px;
 }
 
 
@@ -192,19 +136,15 @@
 .AdminVerUp,.AdminVerDown{
     display: flex;
     flex-direction: column; 
-    height: 100%;
-    width: 500px;
-    
-    
-
+    height: auto;
+    width: auto;
+    margin-right: 30px
 }
 .AdminVerDown{
-   
     flex: 1;
     margin-left: 1%;
 }
 .AdminVerUp{
-    
     flex: 1;
     margin-right: 1%;
 }
@@ -230,3 +170,13 @@
     text-align: center;
     transform: translateY(50px);
 }
+
+
+.Admin-home-about-us-section { 
+    padding: 20px;
+    background-color: #52D1BC;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    text-align: center;
+    color: white;
+    font-weight: bold;
+  }
