--- a/Frontend/my-app/src/Components/Admin/landing/AdminHomePage.css
+++ b/Frontend/my-app/src/Components/Admin/landing/AdminHomePage.css
@@ -2,9 +2,9 @@
     display: flex;
     /* width: 100%; */
     /* background-color: rgb(230, 157, 31); */
-    height: 100vh;
+    height: auto;
     flex-direction: column;
-    width: 100%;
+    width: auto;
     overflow: hidden;
 }
 
@@ -13,24 +13,32 @@
 
 .Admin-Home-hor{
     display: flex;
-    background-color: #52D1BC;
+    background-color: #076E65;
     /* width: 100%; */
     height: 18%;
-    width: 100%;
+    width: auto;
+    flex-direction: row;
+    padding: 0px;
 }
 
+/* #admindetsideimg{
+    height: auto;
+    width: auto;
+} */
+
 .admin-land-icon-1{
-    padding-top: 35% ;
+   padding-top: 35% ;
     padding-left: 15%;
-    height: 150px;
-    width: 100px;
-    /* margin-left: 5%;
-    margin-top: 5%;
-    padding-left: 15%; */
-    align-self: center;
-    margin-bottom: 25%;
+    height: 350px;
+    width: 200px;
+    margin-left: 5%;
+    margin-top: 2%;
+    padding-left: 15%; 
+     align-self: center;
+    margin-bottom: 5%;
     align-content: center;
     margin-left: 15%;
+    padding-bottom: 9%; 
 }
   
   
@@ -43,18 +51,12 @@
     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
     font-weight: bold;
     text-align: center;
+    margin-top: 9%;
 
 
 }
 
 
-  
-  
-.pageTitle {
-    color: white;
-    margin-left: 90px;
-    margin-top: 35px;
-}
 
 .Adminfooter{
     position: fixed;
@@ -71,19 +73,24 @@
 
 
 .AdminLogout{
-    display: flex;
-    justify-content: center; /* Center horizontally */
-    align-items: center;
-    margin-left:70%; 
-    margin-bottom: 2%;   
+    width: 100%;  
+}
+
+
+.admin-input-icon1{
+    margin-left: 95%;
+    margin-top: 3%;
 }
 
 .Admin-Det-ver {
     display: flex;
     flex-direction: row;
     background-color: white;
-    height: 70%;
-    margin-bottom: 40px;
+    height: auto;
+    margin-bottom: 3%;
+    width: auto;
+    padding: 0%;
+    min-height: 500px;
 }
 
 /* .Admin-Home-ver1, .Admin-Home-ver2 {
@@ -97,13 +104,15 @@
 .Admin-Det-ver1 {
     font-size: large;
    
-    width: 18%;
-    height: 88%;
-    background: #52D1BC ;
-    margin-top: 30px;
-    margin-left: 1%;
-    margin-right: 2%;
-    margin-bottom: 30px;
+    width: auto;
+    height: auto;
+    background: white ;
+    margin-top: 3%;
+    margin-left: 8%;
+    margin-right: 3%;
+    margin-bottom: 3%;
+   
+    border-radius: 25px;
     
    
    
@@ -111,26 +120,33 @@
 
 .Admin-Det-ver2 {
     background-color: white;
-    width: 1500px;
-    height: 100%;
-    margin-top: 30px;
-    margin-left: 2%;
-    margin-right: 10px;
-    margin-bottom: 30px;
-    margin-right: 30px;
+    min-width: 900px;
+    width: auto;
+    height: auto;
+    margin-top: 5%;
+    margin-left: 15%;
+    margin-right: 5%;
+    margin-bottom: 5%;
+    max-width: fit-content;
     
 }
 
 .Admin-Det-ver2-inner{
-    padding: 30px;
+    padding: 1%;
+    display: flex;
+    height: auto;
+    background-color: #fcf6f6;
+    box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.3);
+    z-index: 1;
+    transform: translateY(-13%);
+    border-radius: 25px;
+    width: auto;
     display: flex;
     flex-direction: row;
-    height: 100%;
-    background-color: #fcf6f6;
-  box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.3);
-  z-index: 1;
-  transform: translateY(-50px);
-  border-radius: 25px;
+    width: 100%;
+    padding: 0%;
+    margin: 0%;
+    min-height: 400px;
 }
 
 
@@ -143,38 +159,52 @@
 
 .Admin-Det-ver2-1{
    
-    width:100%;
+    width:auto;
     height: 50%;
-    background-color: #076E65;
-    margin: 2%;
     border-radius: 25px;
+    padding: 1%;
+    align-items: center;
+    background-color: #076E65;
+    margin-bottom: 2%;
+    margin-left: 2%;
+
     
 }
 .Admin-Det-ver2-2{
     
-    width:100%;
+    width:auto;
     height: 50%;
-    background-color: #0E0E62;
-    margin: 2%;
     border-radius: 25px;
+    padding: 1%;
+    align-items: center;
+    background-color: #0E0E62;
+    margin-bottom: 2%;
+    margin-left: 2%;
+    
    
 }
 .Admin-Det-ver2-3{
     
-    width:100%;
+    width:auto;
     height: 50%;
-    background-color: #F4A52E;
-    margin: 2%;
     border-radius: 25px;
+    padding: 1%;
+    align-items: center;
+    background-color: #F4A52E;
+    margin-bottom: 2%;
+    margin-right: 2%;
     
 }
 .Admin-Det-ver2-4{
     
-    width:100%;
+    width:auto;
     height: 50%;
-    background-color: #17B2F5;
-    margin: 2%;
     border-radius: 25px;
+    padding: 1%;
+    align-items: center;
+    background-color: #17B2F5;
+    margin-bottom: 2%;
+    margin-right: 2%;
 }
 
 
@@ -192,41 +222,33 @@
 .AdminVerUp,.AdminVerDown{
     display: flex;
     flex-direction: column; 
-    height: 100%;
-    width: 500px;
+    height: auto;
+    width: auto;
     
     
 
 }
 .AdminVerDown{
    
-    flex: 1;
+    width: 50%;
     margin-left: 1%;
 }
 .AdminVerUp{
     
-    flex: 1;
+    width: 50%;
     margin-right: 1%;
 }
 
-.scan,.pres, .radioReport, .finalDiag{
-    width:85%;
-    height: 85%;
-    justify-content: center;
-    margin: 5%;
-    /* margin-top: 2%; */
-    border: 3px solid black;
-    
-}
+
 
 
 
 
 .admindoc, .adminlab, .adminrad, .adminpat, .counttext{
-    width: 100%;
+    width: auto;
     color: black;
     font-size: large;
     font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
     text-align: center;
-    transform: translateY(50px);
+    margin-top: 10%;
 }
