--- a/Frontend/my-app/src/Components/Doctor/Details/DoctorDetails.css
+++ b/Frontend/my-app/src/Components/Doctor/Details/DoctorDetails.css
@@ -2,32 +2,34 @@
     display: flex;
     /* width: 100%; */
     /* background-color: rgb(230, 157, 31); */
-    height: 100vh;
+    height: auto;
     flex-direction: column;
-    width: 100%;
+    width: auto;
     overflow: hidden;
 }
 
 
 
 
-.Doc-Home-hor{
+.Doc-Det-hor{
     display: flex;
     background-color: #076E65;
     /* width: 100%; */
     height: 18%;
-    width: 100%;
+    width: auto;
+    flex-direction: row;
+    padding: 0px;
 }
 
-.admin-land-icon{
+.doc-admin-land-icon{
     padding-top: 35% ;
     padding-left: 15%;
-    height: 50%;
-    width: 50%;
-    margin-left: 15%;
+    height: auto;
+    width: auto;
+    padding-left: 5%;
     margin-top: 5%;
-    padding-left: 12%;
     margin-bottom: 15%;
+    padding-right: 5%;
 }
   
   
@@ -46,14 +48,6 @@
 }
 
 
-  
-  
-.pageTitle {
-    color: white;
-    margin-left: 90px;
-    margin-top: 35px;
-}
-
 .Docfooter{
     position: fixed;
     left: 0;
@@ -68,20 +62,33 @@
 
 
 
-.DocLogout{
-    display: flex;
-    justify-content: center; /* Center horizontally */
-    align-items: center;
-    margin-left:70%;
-    margin-bottom: 2%;    
+.DocDetLogout{
+    width: 100%;
+}
+
+#docdetsideimg{
+    height: 120px;
+    width: 120px;
+}
+/* .logodocdet{
+    min-width: 50%;
+    max-width: 50%;
+    height: auto;
+} */
+
+
+
+.doc-input-icon1{
+    margin-left: 95%;
+    margin-top: 3%;
 }
 
 .Doc-Det-ver {
     display: flex;
     flex-direction: row;
     background-color: white;
-    height: 80%;
-    margin-bottom: 40px;
+    height: auto;
+    margin-bottom: 3%;
 }
 
 /* .Admin-Home-ver1, .Admin-Home-ver2 {
@@ -95,14 +102,14 @@
 .Doc-Det-ver1 {
     font-size: large;
    
-    width: 400px;
-    height: 85%;
+    width: auto;
+    height: auto;
     background: white ;
-    margin-top: 30px;
-    margin-left: 30px;
-    margin-right: 3px;
-    margin-bottom: 30px;
-    height: 85%;
+    margin-top: 3%;
+    margin-left: 8%;
+    margin-right: 3%;
+    margin-bottom: 3%;
+   
     border-radius: 25px;
    
    
@@ -110,79 +117,90 @@
 
 .Doc-Det-ver2 {
     background-color: white;
-    width: 1500px;
-    height: 90%;
-    margin-top: 30px;
-    margin-left: 5%;
-    margin-right: 10px;
-    margin-bottom: 30px;
-    margin-right: 30px;
+    width: auto;
+    height: auto;
+    margin-top: 5%;
+    margin-left: 15%;
+    margin-right: 5%;
+    margin-bottom: 5%;
+    max-width: fit-content;
     
 }
 
 .Doc-Det-ver2-inner{
-    padding: 30px;
+    padding: 1%;
     display: flex;
     flex-direction: column;
-    height: 100%;
+    height: auto;
     background-color: #fcf6f6;
-  box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.3);
-  z-index: 1;
-  transform: translateY(-50px);
-  border-radius: 25px;
+    box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.3);
+    z-index: 1;
+    transform: translateY(-13%);
+    border-radius: 25px;
 
 }
 
 .Doc-Det-ver2-inner-upper{
     display: flex;
     flex-direction: row;
-    height: 90%;
-    width: 100%;
+    flex:2;
+    width: auto;
+    padding: 0%;
+    margin: 0%;
 }
 
 .Doc-Det-ver2-inner-lower{
-    height: 10%;
     flex-direction: row;
     align-items: center;
+    flex:1;
+    margin-top: 2%;
 }
 
 
 
-.input-icon1
+/* .doc-input-icon1
 {
-   margin-left: 250px;
-   margin-top: 20px;
-}
+    flex: 2;
+} */
 
 .Doc-Det-ver2-1{
    
-    width:100%;
+    width:auto;
     height: 50%;
     border-radius: 25px;
+    padding: 1%;
+    align-items: center;
 
     
 }
 .Doc-Det-ver2-2{
     
-    width:100%;
-    height: 50%;
+    width:auto;
+    height:50%;
     border-radius: 25px;
+    padding: 1%;
+    align-items: center;
 
    
 }
 .Doc-Det-ver2-3{
     
-    width:100%;
-    height: 50%;
+    width:auto;
+    height:50%;
     border-radius: 25px;
+    padding: 1%;
+    align-items: center;
 
     
 }
 .Doc-Det-ver2-4{
     
-    width:100%;
+    width:auto;
     height: 50%;
     border-radius: 25px;
+    padding: 1%;
+    align-items: center;
+    
 
    
 }
@@ -190,10 +208,10 @@
 
 
 
-.scanned:hover, 
-.pres:hover, 
-.radioReport:hover, 
-.finalDiag:hover {
+.docscanned:hover, 
+.docpres:hover, 
+.docradioReport:hover, 
+.docfinalDiag:hover {
     transform: scale(1.05); /* Zoom effect on hover */
     box-shadow: 0 0 15px rgba(0, 0, 0, 0.3); /* Shadow effect on hover */
 }
@@ -202,40 +220,62 @@
 .DocVerUp,.DocVerDown{
     display: flex;
     flex-direction: column; 
-    height: 100%;
-    width: 500px;
+    height: auto;
+    width: auto;
     
 
 }
 .DocVerDown{
    
-    flex: 1;
+    width: 50%;
     
 }
 .DocVerUp{
     
-    flex: 1;
-}
-
-.scanned,.pres, .radioReport, .finalDiag{
-    width:85%;
-    height: 85%;
-    justify-content: center;
-    margin: 5%;
-    /* margin-top: 2%; */
-    border-color: #fcf6f6;
-    border-radius: 25px;
-
+    width: 50%;
     
 }
+
+.docscanned,.docpres{
+    width: 100%;         /* ensures the image doesn't exceed the container's width */
+    height: 100%;
+    max-width: 100%;
+    max-height: 100%;
+    padding: 7%;
+    /* justify-content: center; */
+    /* margin: 5%; */
+    /* margin-top: 2%; */
+    border-color: #fcf6f6;
+    border-radius: 50px;  
+    align-content: center; 
+  
+}
+
+.docradioReport, .docfinalDiag{
+    width: 100%;         /* ensures the image doesn't exceed the container's width */
+    height: 100%;
+    max-width: 100%;
+    max-height: 100%;
+    padding: 7%;
+    /* justify-content: center; */
+    /* margin: 5%; */
+    /* margin-top: 2%; */
+    border-color: #fcf6f6;
+    border-radius: 50px;  
+    align-content: center; 
+    /* margin-left: 10%; */
+    /* margin-top: 20%; */
+
+}
+
 
 
 
 .generate-button{
-    width: 30%;
+    width: auto;
     align-items: centre;
-    margin-left: 35%;
-    transform: translateY(35px);
+    margin-left: 37%;
+    /* margin-top: 10%; */
     border-radius: 25px;
     background-color: #076E65;
     color: white;
@@ -248,10 +288,10 @@
 
 
 .scantext, .prestext, .rep, .diagtext{
-    width: 100%;
+    width: auto;
     color: black;
     font-size: large;
     font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
     text-align: center;
-    transform: translateY(-20px);
+    
 }
